--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <nav class="vbt-grid">
     <!-- קישור למונחים → החליפי ל-URL שלך במידת הצורך -->
-    <a class="vbt-card terms" href="terms.html" target="_self" aria-label="פתיחת דף המונחים">
+    <a class="vbt-card terms" href="https://kereneis-boop.github.io/rabbi-sacks/Terms1.html" target="_self" aria-label="פתיחת דף המונחים">
       <div class="row">
         <span class="icon">📚</span>
         <span class="title">מונחים</span>
@@ -50,7 +50,7 @@
     </a>
 
     <!-- קישור למפת חשיבה → החליפי ל-URL שלך במידת הצורך -->
-    <a class="vbt-card mind" href="mindmap.html" target="_self" aria-label="פתיחת דף מפת החשיבה">
+    <a class="vbt-card mind" href="https://kereneis-boop.github.io/rabbi-sacks/mindmap-full.html" target="_self" aria-label="פתיחת דף מפת החשיבה">
       <div class="row">
         <span class="icon">🧠</span>
         <span class="title">מפת חשיבה</span>
