--- a/Terms1.html
+++ b/Terms1.html
@@ -52,11 +52,6 @@
 </style>
 
 <div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
-  <!-- כותרת קטנה -->
-  <div style="display:flex;align-items:center;gap:10px;margin:10px 0 16px;">
-    <div style="width:20px;height:20px;border-radius:50%;background:#fe0100;color:#fff;display:grid;place-items:center;font-weight:900;">?</div>
-    <div style="font-weight:800;">מונחים</div>
-  </div>
 
   <!-- גריד רספונסיבי -->
   <div class="vbt-grid">
@@ -69,7 +64,7 @@
         <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">הרב סולובייצ'יק</span>
       </label>
       <div class="vbt-panel">
-        לורם איפסום דולור סיט אמט…
+        הרב יוסף דב סולובייצ'יק היה מההוגים היהודיים המשפיעים ביותר במאה העשרים, יצר סינתזה ייחודית בין המסורת היהודית לפילוסופיה המערבית. הוא פיתח את דמות "איש ההלכה" המשלבת בין עולם המסורת לעולם המודרני, וטבע את המושג "קהילת הברית" המדגיש את האחריות ההדדית בקהילה היהודית. השפעתו על הרב זקס ניכרת בניסיון המתמיד לגשר בין המסורת למודרנה, בחשיבות הקהילה, ובחתירה למצוא משמעות יהודית עמוקה לאתגרי הזמן.
       </div>
     </div>
 
@@ -78,60 +73,11 @@
       <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
       <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">מיסטיקה</span>
-      </label>
-      <div class="vbt-panel">
-        טקסט דוגמה למונח. אפשר להחליף לכל תיאור שתרצי, כולל קישורים.
-      </div>
-    </div>
-
-    <!-- ===== פריט 3 ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t3" />
-      <label class="vbt-summary" for="vbt-t3" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
         <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">הרבי מלובביץ'</span>
       </label>
       <div class="vbt-panel">
-        טקסט קצר…
+        המנהיג השביעי והאחרון של חסידות חב"ד, היה מגדולי ההוגים והמנהיגים היהודיים במאה העשרים, שהיה ידוע בהשכלתו הרחבה הן בתורה והן במדעים. הוא היווה השראה לרב זקס בראייתו את האפשרות לשלב בין יהדות מסורתית למעורבות מלאה בעולם המודרני, ובמנהיגותו ששילבה בין נאמנות עמוקה למסורת היהודית לבין פתיחות ואחריות כלפי כלל האנושות.
       </div>
     </div>
-
-    <!-- ===== פריט 4 ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t4" />
-      <label class="vbt-summary" for="vbt-t4" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">פוסט שואה</span>
-      </label>
-      <div class="vbt-panel">
-        טקסט דוגמה…
-      </div>
-    </div>
-
-    <!-- ===== פריט 5 ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t5" />
-      <label class="vbt-summary" for="vbt-t5" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">אברהם</span>
-      </label>
-      <div class="vbt-panel">
-        טקסט דוגמה…
-      </div>
-    </div>
-
-    <!-- ===== פריט 6 ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t6" />
-      <label class="vbt-summary" for="vbt-t6" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">נאורות</span>
-      </label>
-      <div class="vbt-panel">
-        טקסט דוגמה…
-      </div>
-    </div>
-
   </div>
 </div>
